--- a/member2.html
+++ b/member2.html
@@ -49,7 +49,7 @@
 
 <body>
     <div class="container">
-        <img src="IMG_0198.JPG" alt="我的头像" class="avatar">
+        <img src="member2.jpg" alt="我的头像" class="avatar">
         <h1>你好，我是李涵</h1>
         <p>欢迎来到我的个人主页！我是一个GIS专业的学生，热爱地图、地理和技术。这个网站展示了我的个人介绍、技能和联系方式。</p>
 
